<resources>
    <string name="app_name">Quản lý chi tiêu</string>
    <string name="navigation_drawer_open">Mở thanh điều hướng</string>
    <string name="nav_header_desc">Thanh điều hướng</string>
    <string name="settings">Thiết lập</string>
    <string name="username">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="login_btn_login">Đăng nhập</string>
    <string name="signup_name">Họ tên</string>
    <string name="signup_btn_register">Đăng ký</string>
    <string name="signup_link_login">Đã đăng ký? Đăng nhập ngay</string>
    <string name="login_link_register">Chưa có tài khoản? Đăng kí ngay</string>
    <string name="signup_retype_password">Nhập lại mật khẩu</string>
    <string name="email">Email</string>
    <string name="authenticating">Đang xác thực...</string>
    <string name="txt_Award">Thưởng</string>
    <string name="txt_Gifts">Được tặng</string>
    <string name="txt_InterestMoney">Tiền lãi</string>
    <string name="txt_Salary">Lương</string>
    <string name="txt_Selling">Bán đồ</string>
    <string name="txt_Others">Khác</string>
    <string name="txt_Income">Thu nhập</string>
    <string name="txt_Expense">Chi tiêu</string>
    <string name="txt_Bills_and_Utilities">Hóa đơn và Tiện ích</string>
    <string name="txt_Entertainment">Giải trí</string>
    <string name="txt_Food_and_Beverage">Ăn uống</string>
    <string name="txt_Business">Kinh doanh</string>
    <string name="txt_Gifts_and_Donations">Quà tặng và Từ thiện</string>
    <string name="txt_Health_and_Fitness">Sức khỏe</string>
    <string name="txt_Holidays">Nghỉ lễ</string>
    <string name="txt_Family">Gia đình</string>
    <string name="txt_Pets">Vật nuôi</string>
    <string name="txt_Shopping">Mua sắm</string>
    <string name="txt_Educations">Giáo dục</string>
    <string name="txt_Friends_and_Lovers">Người yêu và Bạn bè</string>
    <string name="txt_Insurances">Bảo hiểm</string>
    <string name="txt_Investment">Đầu tư</string>
    <string name="txt_Transportation">Di chuyển</string>
    <string name="txt_Travel">Du lịch</string>
    <string name="txt_Withdrawal">Rút tiền</string>
    <string name="txt_Fees_and_Charges">Chi phí</string>
    <string name="txt_Debt">Đi vay</string>
    <string name="txt_Loan">Cho vay</string>
    <string name="txt_Debt_and_Loan">Đi vay và Cho vay</string>
    <string name="txt_Repayment">Trả nợ</string>
    <string name="txt_Debt_Collection">Thu nợ</string>
    <string name="logout">Đăng xuất</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="btn_add_expense">Thêm chi</string>
    <string name="btn_add_income">Thêm thu</string>
    <string name="transaction">Giao dịch</string>
    <string name="debt">Sổ nợ</string>
    <string name="category">Danh mục</string>
    <string name="report">Báo cáo</string>
    <string name="system">Hệ thống</string>
    <string name="about">Giới thiệu</string>
    <string name="login_failed">Đăng nhập thất bại</string>
    <string name="login_username">Tên đăng nhập không hợp lệ</string>
    <string name="login_password">Mật khấu không hợp lệ</string>

    <!--List preference -->
    <string name="pref_change_format_date">Chọn định dạng ngày tháng</string>
    <string name="pref_change_format_currency">Kiểu hiển thị số tiền</string>
    <string name="pref_change_first_day">Chọn ngày đầu tuần</string>
    <string name="pref_update_index">Cập nhật tỷ giá</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Chung</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_change_lang">Thay đổi ngôn ngữ</string>
    <string-array name="pref_lang_list_titles">
        <item>Tiếng Việt</item>
        <item>English</item>
        <item>France</item>
        <item>한국어</item>
        <item>日本語</item>
        <item>Español (Spanish)</item>
        <item>中文(简体)</item>
        <item>Italiano</item>
        <item>Deutsch (German)</item>
        <item>Русский (Russia)</item>
    </string-array>
    <string-array name="pref_lang_list_values">
        <item>vi</item>
        <item>en</item>
        <item>fr</item>
        <item>ko</item>
        <item>ja</item>
        <item>es</item>
        <item>zh</item>
        <item>it</item>
        <item>de</item>
        <item>ru</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Dữ liệu &amp; đồng bộ</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Thông báo</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="navigation_drawer_close">Đóng thanh điều hướng</string>
    <string name="display">Hiển thị</string>
    <string name="no_transact">Không có giao dịch</string>
    <string name="no_transact_desc">Chạm + để thêm</string>
    <string name="add_ts_select_cate">Chọn khoản mục</string>
    <string name="add_ts_note">Ghi chú</string>
    <string name="add_ts_today">Hôm nay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_add_category">Thêm khoản mục</string>
    <string name="cate_name">Tên khoản mục</string>
    <string name="menu_save">Lưu</string>
    <string name="title_context_menu">Chọn chức năng</string>
    <string name="txt_enter_category">Nhập tên khoản mục</string>
    <string name="title_header_category_add">Thêm khoản mục</string>
    <string name="title_header_transaction_add">Thêm giao dịch</string>
    <string name="txt_version">Phiên bản 1.0.304</string>
    <string name="txt_author">bởi Hàn Dương</string>
    <string name="txt_copyright_symbol" translatable="false">© 2018</string>
    <string name="txt_about_share_title">Chia sẻ qua</string>
    <string name="txt_bbm_qr_pin" translatable="false">PIN: 2BFE6A3A</string>
    <string name="txt_title_header_bbm" translatable="false">Black Berry Messener</string>
    <string name="signup_creating">Đang tạo tài khoản</string>
    <string name="txt_menu_view">Xem</string>
    <string name="txt_menu_edit">Sửa</string>
    <string name="txt_menu_delete">Xóa</string>
    <string name="txt_hint_currency">0    đ</string>
    <string name="btn_save">Lưu</string>
    <string name="btn_cancel">Hủy</string>
    <string name="txt_error_signup_noti">Đăng kí thất bại</string>
    <string name="txt_error_login_noti">Đăng nhập thất bại</string>
    <string name="txt_error_signup_name">Tối thiểu 6 kí tự</string>
    <string name="txt_error_signup_email">Địa chỉ email không hợp lệ</string>
    <string name="txt_error_signup_username">Tối thiểu 6 kí tự</string>
    <string name="txt_error_signup_password">Chứa 4 đến 10 kí tự</string>
    <string name="txt_error_signup_repass">Mật khẩu không khớp</string>
    <string name="select_category">Chọn khoản mục</string>
    <string name="txt_input_current_pass">Mật khẩu hiện tại</string>
    <string name="txt_input_new_password">Mật khẩu mới</string>
    <string name="txt_input_renew_pass">Nhập lại mật khẩu mới</string>
    <string name="txt_error_change_pass">Đổi mật khẩu thất bại</string>
    <string name="txt_change_pass_success">Đổi mật khẩu thành công</string>
    <string name="txt_error_add_category">Vui lòng nhập tên khoản mục</string>
    <string name="txt_add_category_success">Thêm khoản mục thành công</string>
    <string name="txt_update_category_success">Cập nhật khoản mục thành công</string>
    <string name="txt_ask_delete">Xác nhận xóa?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="type">Kiểu</string>
    <string name="show_category">Chi tiết khoản mục</string>
    <string name="txt_delete_success">Xóa thành công</string>
    <string name="txt_add_ct_success">Thêm giao dịch thành công</string>
    <string name="txt_error_add_ct_failed">Thêm giao dịch thất bại, vui lòng kiểm tra lại</string>
    <string name="txt_overview">Tổng quan</string>
    <string name="txt_inflow">Tiền vào</string>
    <string name="txt_outflow">Tiền ra</string>
    <string name="txt_more_details">Chạm để xem báo cáo đầy đủ</string>
    <string name="txt_amount">Số tiền</string>
    <string name="txt_time">Thời điểm</string>
    <string name="txt_show_ct">Xem giao dịch</string>
    <string name="txt_update_ct_success">Cập nhật giao dịch thành công</string>
    <string name="txt_spn_time">Theo thời gian</string>
    <string name="txt_spn_category">Theo nhóm</string>
    <string name="txt_balance">Số dư</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>
