<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_menu_transactions"
            android:title="@string/transaction" />
        <!--<item-->
            <!--android:id="@+id/nav_debts"-->
            <!--android:icon="@drawable/ic_menu_debts"-->
            <!--android:title="@string/debt" />-->
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/report" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_categories"
            android:title="@string/category" />
    </group>

    <item android:title="@string/system">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_setting"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
