<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/AppTheme.Dark"
    tools:context=".menu.CategoryFragment">


    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <android.support.design.widget.TabItem
            android:id="@+id/tab_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Income" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Expense" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_debt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debt" />
    </android.support.design.widget.TabLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Hello"/>
</LinearLayout>