<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="45dp"
                    android:hint="0 d" />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <!-- add some padding -->
            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_menu_categories"
                    android:drawablePadding="20dp"
                    android:hint="@string/add_ts_select_cate" />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <!-- password input -->
            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                float:fletPaddingBottom="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_note_black"
                    android:drawablePadding="20dp"
                    android:hint="@string/add_ts_note" />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <!-- change color of hint text-->
            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                float:fletPaddingBottom="10dp"
                float:fletTextAppearance="@style/floatlabelededittext">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_today_black_24dp"
                    android:drawablePadding="20dp"
                    android:hint="@string/add_ts_today" />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>