<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".menu.cashtransaction.AddTransactionActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:inputType="number"
                android:textSize="20sp"
                android:textColorHint="@color/red"
                android:layout_marginBottom="20dp"
                android:hint="0 d" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:weightSum="6">

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_category_select"/>

                    <EditText
                        android:layout_weight="5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:hint="@string/add_ts_select_cate" />

                </TableRow>

                <TableRow
                    android:weightSum="6">

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_note_black"/>

                    <EditText
                        android:layout_weight="5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:hint="@string/add_ts_note"
                        android:inputType="textMultiLine"/>

                </TableRow>

                <TableRow
                    android:weightSum="6">

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_today_black_24dp"/>

                    <EditText
                        android:layout_weight="5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:hint="@string/add_ts_today"
                        android:inputType="datetime"/>
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>